...
    var deleteAction: UIContextualAction!
    static let storyboard_id = String(describing: ItemsViewController.self)
    @IBOutlet weak var addButton: UIBarButtonItem!
    @IBOutlet weak var tableView: UITableView!

    private func setupSearchController() {
        guard let searchResultsViewController = UIStoryboard(name: "Search", bundle: nil).instantiateViewController(withIdentifier: SearchResultsViewController.storyboard_id) as? SearchResultsViewController else { return }
        searchResultsViewController.itemsViewController = self
        self.searchController = UISearchController(searchResultsController: searchResultsViewController)
        searchResultsViewController.selectedTask = self.selectedTask
        self.searchController.searchResultsUpdater = searchResultsViewController
        self.searchController.searchBar.barStyle = .black
        self.searchController.searchBar.tintColor = Color.mandarinOrange
...
